@@ -9,6 +9,8 @@
 
 	my $event = Tab::Event->retrieve($event_id);
 
+	$m->abort unless $event;
+
 	my @clear = Tab::Entry->search( event => $event->id, unconfirmed => 0, dropped => 0, waitlist => 0 );
 	my @dropped = Tab::Entry->search( event => $event->id, unconfirmed => 0, dropped => 1 );
 	my @waitlisted = Tab::Entry->search( event => $event->id, unconfirmed => 0, dropped => 0, waitlist => 1 );
