@@ -1,10 +1,9 @@
 <%args> 
-	$tourn
 	$school
 </%args>
 <%init>
 
-	$tourn = $school->tourn unless $tourn && $tourn->id;
+	my $tourn = $school->tourn;
 
 	my $tz = $tourn->tz;
 	$tz = "UTC" unless $tz;
